# libailsa

./: .gitignore  Jenkinsfile  LICENSE  Makefile.OLD  Makefile.am  TODO  configure.ac
.github/workflows/: libailsa.yml  merge.yml
automake/: ax_lib_ailsa.m4  libailsa.m4
debian/: changelog  control  copyright  libailsa.install  libalisa-dev.install
doc/: functions.txt
docker/ailsalib/: Dockerfile
include/: ailsa.h  ailsalib.h  ailsasql.h  config.h  config.h-SETUP
lib/: Makefile.OLD  Makefile.am  ailsa_kv_s.c  b64.c  data.c  generic.c  ldap.c  libailsa  logging.c  networking.c  sql.c  uuid.c
m4/: ax_lib_ldap.m4
scripts/: add_deb_distro.sh
tests/: Makefile.OLD  Makefile.am  check_ailsa_list.c  check_b64.c  check_kv.c  check_kv_list.c  mock.txt
